// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Test cases render the component 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      class="dse-select__label"
      data-testid="selectButtonTrigger"
    >
      <span
        class="dse-text-base"
      >
        Select a color
      </span>
      <span>
        <svg
          class="size-6"
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Select Test cases render the component and display options - after clicking the button 1`] = `
<DocumentFragment>
  <div
    class="dse-select"
  >
    <button
      class="dse-select__label"
      data-testid="selectButtonTrigger"
    >
      <span
        class="dse-text-base"
      >
        Select a color
      </span>
      <span>
        <svg
          class="size-6"
          fill="none"
          height="1rem"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m4.5 15.75 7.5-7.5 7.5 7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
    </button>
    <ul
      class="dse-select__overlay"
      style="top: 10px;"
    >
      <li
        class="dse-select__list-item"
        role="menuitemradio"
      >
        <span
          class="dse-select__list-item__label"
        >
          <div
            class="dse-width-sm dse-height-sm"
            style="background-color: pink;"
          />
          <div
            class="dse-margin-left-sm dse-margin-right-none dse-margin-top-none dse-margin-bottom-none"
          >
            Pink
          </div>
        </span>
      </li>
      <li
        class="dse-select__list-item"
        role="menuitemradio"
      >
        <span
          class="dse-select__list-item__label"
        >
          <div
            class="dse-width-sm dse-height-sm"
            style="background-color: green;"
          />
          <div
            class="dse-margin-left-sm dse-margin-right-none dse-margin-top-none dse-margin-bottom-none"
          >
            Green
          </div>
        </span>
      </li>
      <li
        class="dse-select__list-item"
        role="menuitemradio"
      >
        <span
          class="dse-select__list-item__label"
        >
          <div
            class="dse-width-sm dse-height-sm"
            style="background-color: orange;"
          />
          <div
            class="dse-margin-left-sm dse-margin-right-none dse-margin-top-none dse-margin-bottom-none"
          >
            Orange
          </div>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
